Bug 14370 - Client tools are not able to read gencache anymore since 4.10
Summary: Client tools are not able to read gencache anymore since 4.10
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.12.2
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Karolin Seeger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-05-06 15:15 UTC by Andreas Schneider
Modified: 2020-07-09 07:31 UTC (History)
2 users (show)

See Also:


Attachments
patch for 4.12 (12.73 KB, patch)
2020-05-19 05:31 UTC, Andreas Schneider
jra: review+
Details
patch for 4.11 (12.69 KB, patch)
2020-05-19 05:33 UTC, Andreas Schneider
jra: review+
Details
patch for 4.10 (12.72 KB, patch)
2020-05-19 05:35 UTC, Andreas Schneider
jra: review+
Details
followup patch for 4.11 (902 bytes, patch)
2020-07-02 18:26 UTC, Guenther Deschner
asn: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2020-05-06 15:15:04 UTC
Client tools are not able to read gencache anymore since 4.10 as normal users.

Example:

  net ads status
Comment 1 Andreas Schneider 2020-05-19 05:31:29 UTC
Created attachment 15991 [details]
patch for 4.12
Comment 2 Andreas Schneider 2020-05-19 05:33:24 UTC
Created attachment 15992 [details]
patch for 4.11
Comment 3 Andreas Schneider 2020-05-19 05:35:48 UTC
Created attachment 15993 [details]
patch for 4.10
Comment 4 Jeremy Allison 2020-05-20 23:13:32 UTC
Re-assigning to Karolin for inclusion in 4.10.next, 4.11.next, 4.12.next.
Comment 5 Karolin Seeger 2020-05-22 12:01:12 UTC
(In reply to Jeremy Allison from comment #4)
Pushed to autobuild-v4-{10,11,12}-test.
Comment 6 Karolin Seeger 2020-06-04 10:29:54 UTC
(In reply to Karolin Seeger from comment #5)
Pushed to all branches.
Closing out bug report.

Thanks!
Comment 7 Guenther Deschner 2020-07-02 18:26:28 UTC
Created attachment 16106 [details]
followup patch for 4.11

we should also *not* install the test binary in 4.11 (as we do in 4.10)
Comment 8 Andreas Schneider 2020-07-06 07:44:07 UTC
Karolin, could you please apply the follow up patch to 4.11? Thanks.
Comment 9 Karolin Seeger 2020-07-07 07:02:21 UTC
(In reply to Andreas Schneider from comment #8)
Pushed additional patch to autobuild-v4-11-test.
Comment 10 Karolin Seeger 2020-07-09 07:31:04 UTC
Pushed to all branches.
Closing out bug report.

Thanks!